--- a/src/style.css
+++ b/src/style.css
@@ -68,8 +68,22 @@ input,
 select {
   border-radius: 5px;
   border: 2px solid transparent;
-  padding: 15px 10px;
+  padding: 0 10px;
+  height: 50px;
   outline: none;
+  background-color: #f2f5f7;
+  width: 100%;
+  transition: border-color 0.3s ease-in-out, color 0.3s ease-in-out,
+    background-color 0.3s ease-in-out;
+}
+
+.v-select .vs__search::placeholder,
+.v-select .vs__dropdown-toggle,
+.v-select .vs__dropdown-menu {
+  border-radius: 5px;
+  border: 2px solid transparent;
+  outline: none;
+  padding: 0;
   background-color: #f2f5f7;
   width: 100%;
   transition: border-color 0.3s ease-in-out, color 0.3s ease-in-out,
