--- a/src/style.css
+++ b/src/style.css
@@ -13,12 +13,6 @@
   --small-height: 32px;
 }
 
-html,
-body {
-  width: 100%;
-  height: 100%;
-}
-
 #app {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -52,16 +46,18 @@ form {
   margin-bottom: calc(1em * 1.5);
 }
 
-label {
+.label {
   display: block;
   margin-bottom: 4px;
   width: 100%;
 }
 
-.input {
+.textInputContainer {
   height: var(--large-height);
 }
-input {
+
+.input,
+.v-select .vs__search {
   border-radius: 5px;
   border: 2px solid transparent;
   background-color: #f2f5f7;
@@ -78,8 +74,14 @@ input {
   border: none !important;
 }
 
+.v-select .vs__selected-options {
+  display: contents !important;
+}
 .v-select .vs__actions {
   padding-top: 0 !important;
+}
+.v-select .vs__selected {
+  margin-top: 0 !important;
 }
 .v-select .vs__selected-options {
   padding: 0 !important;
@@ -89,7 +91,6 @@ input {
   padding: 0;
   height: 100%;
   border: none !important;
-
   width: 100%;
 }
 .v-select {
@@ -105,7 +106,7 @@ input {
   border: none !important;
 }
 
-input:focus,
+.input:focus,
 .v-select-focus {
   border-color: var(--primary-color);
 }
@@ -118,16 +119,15 @@ input:focus,
   font-size: 14px;
 }
 
-.form-item.has-error input,
+.form-item.has-error .input,
 .form-item.has-error .v-select,
-.form-item.has-error select {
+.form-item.has-error .vs__search {
   background-color: var(--error-bg-color);
   color: var(--error-color);
 }
 
-.form-item.has-error input:focus,
-.form-item.has-error .v-select-focus ,
-.form-item.has-error select:focus {
+.form-item.has-error .input:focus,
+.form-item.has-error .v-select-focus {
   border-color: var(--error-color);
 }
 
@@ -135,16 +135,15 @@ input:focus,
   color: var(--error-color);
 }
 
-.form-item.success input,
+.form-item.success .input,
 .form-item.success .v-select,
-.form-item.success select {
+.form-item.success .vs__search {
   background-color: var(--success-bg-color);
   color: var(--success-color);
 }
 
-.form-item.success input:focus,
-.form-item.success .v-select-focus,
-.form-item.success select:focus {
+.form-item.success .input:focus,
+.form-item.success .v-select-focus {
   border-color: var(--success-color);
 }
 
