--- a/src/style.css
+++ b/src/style.css
@@ -115,7 +115,7 @@ form {
 .help-message {
   position: absolute;
   bottom: calc(-1.5 * 1em);
-  left: 0;
+  right: 0;
   margin: 0;
   font-size: 14px;
 }
