feat: selection input > add place holder

--- a/src/style.css
+++ b/src/style.css
@@ -73,8 +73,12 @@ form {
   margin: 0 !important;
   padding: 0 10px !important;
   border: none !important;
+  text-align: right;
 }
 
+.v-select ::placeholder {
+  color: inherit !important;
+}
 .v-select .vs__selected-options {
   display: contents !important;
 }
